ReSharper.FSharp/test/data/parsing/errors/Expr - Object expr - Interface 01.fs
{ new obj() with
    override this.P = ()

  interface I with

}
